0.5
 - WARNING: keyboard shortcuts got changed again due to steamers addition
 - Support for steamers, see the readme
 - Detection script will notify what loco has been detected
 - Detections and notches configurations for MANY more locos (ALL I own)
 - Handbrake indicator, better CruiseControl/AFB) indicator
 - Separate Loco and Train brakes indicators (some locos use both)

0.4
 - WARNING: the keyboard shortcuts (F1-F9) got changed again due
   to the addition of Distance and a change with TargetSpeed
 - WARNING: the modifier for ALL the shortcuts got changed to
   SHIFT-ALT due to collisions with TS shortcuts (adv. brakes)
 - Distance/Countdown implementation, see the readme
 - Moved the TargetSpeed to the controls (blue) section
 - Made it possible to use the Patcher without TS registry entries
   and custom named RailWorks folder
 - Handle the windowed mode case, move together with TS window
 - Removed numbers formatting in lua for some variables, pass the full float/double
 - Detections and notches configurations for more locos
 - Minor code changes

0.3
 - WARNING: the script has been split into 3 files, you need all
  - Overlay configuration is in the trainsim-helper-overlay.lua
  - Joystick configuration is in the trainsim-helper-joystick.lua
  - Detections for locos are in the trainsim-helper.lua
 - WARNING: ALL ControlRanges are detected before Locos detections
  - This allows for less code in the detection routines
 - GearControl axis added (Gear Lever)
 - Gear in the Overlay moved to the controls group (blue)
  - WARNING: Because of this shortcuts got shifted by 1 (F1-F9, F11-F12)
 - Vacuum Pipe added to the Overlay (red), Vacuum Chamber ignored (seems irrelevant)
 - Moved the clock to align better with long scenario names and F5 UI
 - Overlay GradientUK format option (1:XXX) (mostly autodetected for UK)
 - Fixed gigantic speed limits for SpeedLimitType == 3 (now it's '??')
 - Add units to acceleration, recalculate from m/s^2 (Kph/m, Mph/m)